# svhn-detection-tf

./: .gitignore  README.md  augment.py  augmentation_playground.ipynb  data.py  pyproject.toml  requirements.txt  svhn-playground.ipynb  svhn_dataset.py  team.py  test_utils.py  train.py  utils.py
svhn_detection/: .gitignore  augment.py  autoaugment.py  coco_eval.py  data.py  efficientdet.py  efficientnet.py  eval.py  svhn_eval.py  train.py  utils.py
svhn_detection/notebooks/: augmentation_playground.ipynb  autoaugment_playground.ipynb  svhn-playground.ipynb  svhn_playground.ipynb
