[tool.poetry]
name = "svhn-detection-tf"
version = "0.1.0"
description = ""
authors = ["Jonáš Kulhánek <jonas.kulhanek@live.com>", "Patrik Valkovic <patrik.valkovic@hotmail.cz>", "Martin Vastl <martin.vastl2@gmail.com>", "Jan Uhlík <jan@uhlik.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.2.0rc3"
tensorflow-addons = { git = "https://github.com/tensorflow/addons.git", tag = "r0.9" }
numpy = "*"
pandas = "*"
matplotlib = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]
autopep8 = "*"
pylint = "*"
jedi = "*"
rope = "*"
flake8 = "*"
ipython = "*"
ipykernel = "*"
ipdb = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
